Add async submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/line-emitter"]
 	path = modules/line-emitter
 	url = https://github.com/Kami/luvit-line-emitter
+[submodule "modules/async"]
+	path = modules/async
+	url = https://github.com/racker/luvit-async
